# DHIF

./: .gitignore  CMakeLists.txt  README.md
cmake/: config.h.cmake
cmake/toolchains/: Stampede-intel-mvapich2-mkl.cmake
include/: DHIF.hpp
include/DHIF/: dist_hifde3d.hpp  factordata.hpp  indexdata.hpp  mat_tools.hpp  skelindexdata.hpp
include/DHIF/core/: blas.hpp  choice.hpp  dense.hpp  dist_multi_vec.hpp  environment.hpp  lapack.hpp  memory_map.hpp  mpi.hpp  mpi_choice.hpp  multi_vec.hpp  numtns.hpp  random.hpp  sparse.hpp  tensor.hpp  timer.hpp  vec3t.hpp  vector.hpp
include/DHIF/core/dist_multi_vec/: decl.hpp  impl.hpp
include/DHIF/core/environment/: decl.hpp  impl.hpp
include/DHIF/core/multi_vec/: decl.hpp  impl.hpp
src/DistHIFDE3D/: DistHIFDE3D.cpp
src/core/: global.cpp  mpi.cpp  random.cpp
src/mat_tools/: Add.cpp  AdjointMultiplyMatrix.cpp  AdjointMultiplyVector.cpp  ConvertSubmatrix.cpp  Invert.cpp  MultiplyAdjoint.cpp  MultiplyMatrix.cpp  MultiplyTranspose.cpp  MultiplyVector.cpp  PackedQR.cpp  TransposeMultiplyMatrix.cpp  TransposeMultiplyVector.cpp  Update.cpp
